# Restaurant-Management-system

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  Reservation.json  build.bat  data\EmployeeInfo.json  folderStructure.txt  folder_structure.txt  imgui.ini
Data/: AttendanceRecord.json  Budget.json  EmployeeInfo.json  IDRegistry.json  MealHistory.json  MealHistory1.json  Menu.json  MenuAddons.json  MenuAddons1.json  MenuItem.json  MenuItem1.json  Order.json  Reservation.json  Restaurant.json  Restaurant1.json  Storages.json  Table.json
UML/Application/: BudgetManager.puml  CustomerManager.puml  EmployeeManager.puml  MealManager.puml  MenuManager.puml  OrderManager.puml  ReservationManager.puml  StorageManager.puml  TableManager.puml
UML/Core/: CurrencyUtils.puml  IDManager.puml
UML/Domain/Entity/Budget/: Bill.puml  BillType.puml  Budget.puml
UML/Domain/Entity/Customer/: Customer.puml
UML/Domain/Entity/Employee/: Employee.puml
UML/Domain/Entity/Kitchen/: Kitchen.puml
UML/Domain/Entity/Meal/: Meal.puml
UML/Domain/Entity/Menu/: Menu.puml
UML/Domain/Entity/Order/: Order.puml  OrderStatus.puml
UML/Domain/Entity/Reservation/: Reservation.puml
UML/Domain/Entity/Storage/: Resource.puml  Storate.puml
UML/Domain/Entity/Table/: Table.puml
UML/Domain/Interface/: Person.puml
UML/Domain/Service/Employee/: EmployeeService.puml
UML/Domain/Service/Order/: OrderService.puml
UML/Domain/ValueObject/: DateTime.puml  MealAddon.puml  MealIngredient.puml
UML/Infrastructure/: BudgetRepository.puml  CustomerRepository.puml  EmployeeRepository.puml  FileHandler.puml  Logger.puml  OrderRepository.puml
UML/Infrastructure/Meal/: FileMealRepository.puml  IMealRepository.puml
UML/Infrastructure/Menu/: FileMenuRepository.puml  IMenuRepository.puml
UML/Infrastructure/Reservation/: FileReservationRepository.puml  IReservationRepository.puml
UML/Infrastructure/Table/: FileTableRepository.puml  ITableRepository.puml
UML/UI/: UICore.puml
UML/UI/Screen/: BudgetScreen.puml  Dashboard.puml  DateTimePicker.puml  EmployeeScreen.puml  MenuScreen.puml  OrderScreen.puml  ReservationScreen.puml  ResourceScreen.puml  Screen.puml  StorageScreen.puml
data/: CustomerInfo.json  EmployeeInfo.json
src/: main.cpp
src/Application/Budget/: BudgetApp.cpp  BudgetApp.hpp  BudgetManager.cpp  BudgetManager.hpp
src/Application/Customer/: CustomerManager.cpp  CustomerManager.hpp
src/Application/Employee/: EmployeeManager.cpp  EmployeeManager.hpp
src/Application/Meal/: MealManager.cpp  MealManager.hpp
src/Application/Menu/: MenuManager.cpp  MenuManager.hpp  RestaurantManager.cpp  RestaurantManager.hpp
src/Application/Order/: OrderManager.cpp  OrderManager.hpp
src/Application/Reservation/: ReservationManager.cpp  ReservationManager.hpp
src/Application/Resource/: filehandle.cpp  filehandle.hpp
src/Application/Restaurant/: RestaurantManager.cpp  RestaurantManager.hpp
src/Application/Storage/: StorageManager.cpp  StorageManager.hpp
src/Application/Table/: TableManager.cpp  TableManager.hpp
src/Application/Utility/: logger.cpp  logger.hpp
src/Core/: Constants.hpp
src/Core/Utils/: CurrencyUtils.cpp  CurrencyUtils.hpp  EmployeeManager.cpp  EmployeeManager.hpp  IDManager.cpp  IDManager.hpp
src/Domain/Entity/: Branch.cpp  Branch.hpp  Meal.cpp  Meal.hpp  Menu.cpp  Menu.hpp
src/Domain/Entity/Budget/: Bill.cpp  Bill.hpp  BillType.hpp  Budget.cpp  Budget.hpp
src/Domain/Entity/Customer/: Customer.cpp  Customer.hpp
src/Domain/Entity/Employee/: Chef.cpp  Chef.hpp  Employee.cpp  Employee.hpp  Manager.cpp  Manager.hpp  Receptionist.cpp  Receptionist.hpp  Waiter.cpp  Waiter.hpp
src/Domain/Entity/Kitchen/: Kitchen.cpp  Kitchen.hpp
src/Domain/Entity/Meal/: Meal.cpp  Meal.hpp
src/Domain/Entity/Menu/: Branch.cpp  Branch.hpp  Menu.cpp  Menu.hpp
src/Domain/Entity/Order/: Order.cpp  Order.hpp  OrderStatus.hpp
src/Domain/Entity/Reservation/: Reservation.cpp  Reservation.hpp  ReservationStatus.hpp
src/Domain/Entity/Restaurant/: Restaurant.cpp  Restaurant.hpp
src/Domain/Entity/Storage/: Resource.cpp  Resource.hpp  (+2 more)
src/Domain/Interface/: IMeal.cpp  IMeal.hpp  Person.cpp  Person.hpp
src/Domain/Observers/: IObserver.hpp  ISubject.hpp  UsingResourceSubject.cpp  UsingResourceSubject.hpp
src/Domain/Shared/: Date.cpp  Date.hpp
src/Domain/ValueObject/: DateTime.hpp  Datetime.cpp  MealAddon.cpp  MealAddon.hpp  MealIngredients.cpp  MealIngredients.hpp
src/Infrastructure/Budget/: BudgetPersistence.cpp  BudgetPersistence.hpp  BudgetRepository.cpp  BudgetRepository.hpp
src/Infrastructure/Customer/: CustomerRepository.cpp  CustomerRepository.hpp
src/Infrastructure/Employee/: EmployeeRepository.cpp  EmployeeRepository.hpp
src/Infrastructure/FileHandle/: FileHandle.cpp  FileHandle.hpp
src/Infrastructure/Logging/: Logger.cpp
src/Infrastructure/Meal/: FileMealRepository.cpp  FileMealRepository.hpp  IMealRepository.cpp  IMealRepository.hpp
src/Infrastructure/Menu/: FileMenuRepository.cpp  FileMenuRepository.hpp  IMenuRepository.cpp  IMenuRepository.hpp
src/Infrastructure/Order/: OrderRepository.cpp  OrderRepository.hpp
src/Infrastructure/Reservation/: FileReservationRepository.cpp  FileReservationRepository.hpp  IReservationRepository.cpp  IReservationRepository.hpp
src/Infrastructure/Restaurant/: FileRestaurantRepository.cpp  FileRestaurantRepository.hpp  IRestaurantRepository.cpp  IRestaurantRepository.hpp
src/Infrastructure/Table/: FileTableRepository.cpp  FileTableRepository.hpp  ITableRepository.cpp  ITableRepository.hpp
src/Test/: BudgetTest.hpp  OrderTest.hpp
src/UI/Components/: BudgetScreen.cpp  BudgetScreen.hpp  Dashboard.cpp  Dashboard.hpp  DateTimePicker.cpp  DateTimePicker.hpp  EmployeesScreen.cpp  EmployeesScreen.hpp  MenuScreen.cpp  MenuScreen.hpp  MenuSectionScreen.cpp  MenuSectionScreen.hpp  OrderScreen.cpp  OrderScreen.hpp  ReservationScreen.cpp  ReservationScreen.hpp  ResourceScreen.cpp  ResourceScreen.hpp  Screen.cpp  Screen.hpp  StorageScreen.cpp  StorageScreen.hpp  TestScreen.cpp  TestScreen.hpp
src/UI/UICore/: Core.cpp  Core.hpp
(+42 files in other folders)
